# django-postgres-unlimited-varchar

./: .gitignore  README.rst  django_postgres_unlimited_varchar.py  pyproject.toml
