[tool.poetry]
name = "django-postgres-unlimited-varchar"
version = "1.1.0"
description = "A tiny app adding support unlimited varchar fields in Django/Postgres."
authors = ["Jacob Kaplan-Moss <jacob@jacobian.org>"]
readme = "README.rst"

[tool.poetry.dependencies]
django = "^2 || ^3"
python = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
